# RazrPO-LW1

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  file.cpp  file.h  main.cpp
.github/workflows/: main.yml
tests/: test_mult.cpp  test_sum.cpp
